# Game_ProgrammingReference

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Game_ProgrammingReference.sln  README.md
.github/workflows/: cmake.yml
00_New_Beginner_Read_This_First/: README.md
00_Start_Here_Beginner_To_Expert_Learning_Roadmap/: README.md
01_Game_Loop_Input_Collision/: GameLoopDemo.cpp  GameLoopDemo.h
02_Shooter_Weapon_Bullet_System/: ShooterDemo.cpp  ShooterDemo.h
03_Soulslike_Stamina_Dodge_Parry_Combat/: SoulslikeDemo.cpp  SoulslikeDemo.h
04_Action_RPG_Ability_Inventory_Quest/: ActionRPGDemo.cpp  ActionRPGDemo.h
05_Enemy_AI_State_Machine_Patrol_Chase_Attack/: EnemyAIDemo.cpp  EnemyAIDemo.h
06_Action_Game_Combo_LockOn_Targeting_System/: ComboLockOnDemo.cpp  ComboLockOnDemo.h
07_Game_Save_Load_Player_Profile_Settings/: SaveLoadDemo.cpp  SaveLoadDemo.h
08_Beginner_Player_Controller_Movement_Camera_Follow_Tutorial/: BeginnerPlayerControllerDemo.cpp  BeginnerPlayerControllerDemo.h  README.md
09_Intermediate_Combat_Hitbox_Hurtbox_Frame_Data_Tutorial/: IntermediateHitboxDemo.cpp  IntermediateHitboxDemo.h  README.md
10_Advanced_Skill_Tree_Progression_Unlock_System/: AdvancedSkillTreeDemo.cpp  AdvancedSkillTreeDemo.h  README.md
11_Expert_Gameplay_Event_Bus_Achievement_System/: ExpertEventBusDemo.cpp  ExpertEventBusDemo.h  README.md
12_Advanced_Object_Pool_Projectile_Enemy_Spawn_System/: ObjectPoolSpawnDemo.cpp  ObjectPoolSpawnDemo.h  README.md
13_Expert_Behavior_Tree_Boss_AI_Phase_System/: BossBehaviorTreeDemo.cpp  BossBehaviorTreeDemo.h  README.md
14_Master_Deterministic_Replay_Command_Buffer_System/: DeterministicReplayDemo.cpp  DeterministicReplayDemo.h  README.md
15_Master_Rollback_Networking_Input_Prediction_System/: README.md  RollbackNetworkingDemo.cpp  RollbackNetworkingDemo.h
16_Grandmaster_ECS_Data_Oriented_Gameplay_System/: ECSDemo.cpp  ECSDemo.h  README.md
17_Grandmaster_Data_Driven_Loot_Table_Difficulty_Scaling_System/: LootTableDemo.cpp  LootTableDemo.h  README.md
99_Project_Self_Checks_For_Game_Systems/: SelfCheckDemo.cpp  SelfCheckDemo.h
Common_Game_Code/Gameplay/: CooldownTimer.h  HealthComponent.h  ResourcePool.h
Common_Game_Code/Math/: Vector2.h
Game_Development_Guides/: README.md
Game_ProgrammingReference/: Game_ProgrammingReference.cpp  Game_ProgrammingReference.vcxproj  Game_ProgrammingReference.vcxproj.filters
Unity_Troubleshooting_Guide/: README.md
Unreal_Engine_5_Troubleshooting_Guide/: README.md
